--- a/src/App.css
+++ b/src/App.css
@@ -104,16 +104,48 @@ html{
 a{
   text-decoration: none;
 }
-nav{
-  position: sticky;
+
+.logo{
+  font-family: 'Rhythem';
+  font-size: 4rem;
+  line-height: 2rem;
 }
+
+.header{
+  background-color: white;
+  position: -webkit-sticky;
+	position: sticky;
+  z-index: 10;
+  top: -8rem;
+}
+
+nav{
+  margin-top: 3.5rem; 
+}
+
+.nav{
+  transition: .2s;
+}
+
+.nav:hover{
+  color: rgb(148, 148, 148);
+}
+
+
 .Gallery{
+  position: relative;
+  z-index: 9;
   min-height: 80vh;
   /* overflow-x: hidden; */
 }
 
+/* .scroll{
+   margin-top: 13rem;
+} */
+
 .card-section{
-  overflow-x: auto;
+ 
+  overflow-x: hidden;
   width: 100vw;
   
 }
@@ -151,13 +183,40 @@ nav{
 }
 
 .home{
-  min-height: 50vh;
+  min-height: 40vh;
+}
+
+.social-icons {
+  margin: 0 2.5rem;
+}
+.social-icons *{
+  color: #5d6f7c;
 }
 
 
+footer{
+  height: 30rem;
+}
 
-/* .header{
-  
+
+.AdSpaceYo{
+  position: absolute;
+  right: 0;
+  z-index: 15;
+  /* background-color: #124375; */
+  width: 13vw;
+  min-height: 20rem;
+}
+
+.banner{
+  width: 100%;
+  height: 30rem;
+}
+
+/* .banner > img{
+  width: 100%;
+
+  height: 30rem;
 } */
 
 @media screen and (max-width: 360px) {
