added Gallery cards

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   /* --darker-yellow-color: #ffb048; */
 
   --highlight: #9aa506;
-  --highlight-2: #dfe49b;
+  --highlight-2: #d8daba;
 
   --bg-color-light:#f5f7f8;
   --bg-color-mid:#1B548A;
