--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@ html{
 .flex{ display: flex;}
 .flex-column{flex-direction: column;}
 .flex-row{flex-direction: row;}
+.flex-row-reverse{flex-direction: row-reverse;}
 
 .flex-column-on-desktop-row-on-mobile{flex-direction: column;}
 .flex-row-on-desktop-column-on-mobile{flex-direction: row;}
@@ -297,12 +298,17 @@ footer{
 
 .gallery-card-info{
   text-align: center;
-  border: 1px solid rgb(238, 238, 238);
+  /* border: 1px solid rgb(238, 238, 238); */
   padding: 1rem;
 }
 
 .gallery-card-title{
   font-weight: 400;
+  letter-spacing: 1px;
+  display: -webkit-inline-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
   letter-spacing: 1px;
 }
 
