reordered navbar, added /gallery/posts loading screen

--- a/src/App.css
+++ b/src/App.css
@@ -198,6 +198,70 @@ footer{
 }
 
 
+/*/////////////*/
+/* GALLERY PAGE */
+/*/////////////*/
+
+
+.ImagesComponenet{
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 1rem;
+}
+
+
+/* .LoadingImagesComponenet-head{
+  width: 62.2%;
+} */
+
+.width62{
+  width: 62.2%;
+}
+
+
+.LoadingImagesComponenet-title{
+  height: 3rem;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.LoadingImagesComponenet-author{
+  height: 1rem;
+  width: 6rem;
+  margin-bottom: 1rem;
+}
+
+.LoadingImagesComponenet-head-description{
+  margin-top: 2rem;
+}
+
+.LoadingImagesComponenet-description{
+  height: 2rem;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.last{
+  width: 70%;
+  /* margin-bottom: 4rem; */
+}
+
+.LoadingImagesComponenet-Img-section{
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 1rem;
+  margin-top: 3rem;
+}
+
+.LoadingImagesComponenet-Img{
+  width: 25rem;
+  height: 35rem;
+  margin: 1rem;
+}
+
+
+
+
 
 /*/////////////*/
 /* CAREER PAGE */
