--- a/src/index.css
+++ b/src/index.css
@@ -105,6 +105,19 @@ code {
 	}
 }
 
+/* .scroll-container, .scroll-area{
+
+} */
+
+.scroll-container{
+	/* overflow: auto; */
+	scroll-snap-type: y mandatory;
+
+}
+
+.scroll-area{
+	scroll-snap-align: center;
+}
 
 
 
