--- a/src/App.css
+++ b/src/App.css
@@ -200,6 +200,8 @@ nav{
   bottom: 4rem;
   right: 2rem;
   transform: rotate(90deg);
+  /* font-size: 2rem; */
+  /* font-weight: 100; */
 }
 
 
@@ -547,6 +549,202 @@ footer{
   border: 2px solid red; */
 }
 
+
+.BlogSection > section > div{
+  min-height: 60%;
+  /* background-color: #adadad; */
+  width: 100%;
+}
+
+
+.BlogSectionHeroContetn{
+  background-image: url('https://images.unsplash.com/photo-1525441273400-056e9c7517b3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: flex-end;
+  box-shadow: inset 0px -6rem 10rem -1rem #3a464e,
+  inset 1rem -7rem 10rem -2rem #3a464e;
+}
+
+.BlogSectionHeroContetn-author{
+  padding: 1rem 2rem;
+}
+
+.BlogSectionHeroContetn-author * {
+  color: var(--font-color-light);
+}
+
+.BlogSectionTopFive-container{
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.BlogSectionTopFive-container > .BlogSectionTopFive-content-container{
+  height: 22rem;
+  display: flex;
+}
+
+.BlogSectionTopFive-content{
+  /* background-color: #5d6f7c; */
+  /* border: 1px solid red; */
+  height: 100%;
+  width: 50%;
+  padding: 1rem;
+}
+
+
+.BlogSectionTopFive-large-content:hover .BlogSectionTopFive-large-content-cover-img{
+  transform: scale(1.05);
+}
+
+.BlogSectionTopFive-large-content-cover{
+  overflow: hidden;
+  width: 100%;
+  height: 50%;
+}
+.BlogSectionTopFive-large-content-cover-img{
+  transition: .3s;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: bottom;
+}
+
+.BlogSectionTopFive-large-content-author > div {
+  display: flex;
+  align-items: center;
+}
+
+.BlogSectionTopFive-large-content-author > div  *{
+  height: .8rem;
+  margin: .8rem 1rem 0 0;
+  padding: 0;
+  font-size: var(--font-tiny);
+  /* background-color: red; */
+}
+
+.BlogSectionTopFive-large-content-author > div > img{
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 50%;
+  /* margin-left: 1rem; */
+}
+
+.BlogSectionTopFive-large-content-author > h2 {
+  font-size: var(--font-medium);
+  letter-spacing: 1px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.BlogSectionTopFive-large-content-author > p {
+  font-size: var(--font-small);
+  letter-spacing: 1px;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.BlogSectionTopFive-small-content > a :hover .BlogSectionTopFive-small-content-img{
+  transform: scale(1.05);
+}
+
+.BlogSectionTopFive-small-content-containers{
+  display: flex;
+  /* background-color: green; */
+
+}
+
+
+.BlogSectionTopFive-small-content-img-container{
+  /* background-color: red; */
+  overflow: hidden;
+  width: 14rem;
+  /* margin: 0;
+  padding: 0; */
+}
+
+.BlogSectionTopFive-small-content-img-container > img{
+  transition: .3s;
+  height: 5rem;
+}
+
+.BlogSectionTopFive-small-content-author-and-title{
+  padding-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+
+.BlogSectionTopFive-small-content-author-and-title > h3{
+  font-size: var(--font-small);
+  margin: 0;
+  padding: 0;
+  /* background-color: #c5c5c5; */
+}
+
+.BlogSectionTopFive-small-content-author > div {
+  display: flex;
+  align-items: center;
+  /* background-color: #9aa506; */
+}
+
+.BlogSectionTopFive-small-content-author > div  *{
+  height: .8rem;
+  margin: 0 .5rem 0 0;
+  padding: 0;
+  font-size: var(--font-tiny);
+  /* background-color: red; */
+}
+
+.BlogSectionTopFive-small-content-author > div > img{
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 50%;
+}
+
+.BlogSectionTopFive-content-view-more{
+  /* background-color: #9aa506; */
+  transition: .2s;
+  border: 1px solid #9aa506;
+  color: #9aa506;
+  padding: 1rem 8rem;
+}
+
+.BlogSectionTopFive-content-view-more:hover{
+  background-color: #9aa506;
+  color: white;
+}
+
+
+
+
+
+
+
+
+.BlogSectionSponsor{
+  position: relative;
+  height: 5rem;
+  margin-top: 4rem;
+  background-color: #5d6f7c;
+}
+
+.BlogSectionSponsor::before{
+  position: absolute;
+  content: '-SPONSORED AD-';
+  top: -1.3rem;
+  right: 50%;
+  transform: translateX(50%);
+  font-size: var(--font-tiny);
+}
 
 
 
