--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -2,9 +2,13 @@
     min-height: 40vh;
 } */
 
+
+.banner{
+    height: 100dvh;
+}
 .banner-cta{
 /* position: relative; */
-background-color: #202020;
+/* background-color: #202020; */
 width: 50%;
 height: 100%;
 opacity: .9;
@@ -21,6 +25,20 @@ width: 6rem;
 margin-left: var(--space-wide);
 transition: .2s;
 }
+
+.banner-cta-studio{
+margin: 0 var(--space-wide) 2rem;
+/* padding: .7rem 0; */
+color: white;
+font-size: var(--font-small);
+
+}
+
+.banner-cta-studio-name{
+    /* font-size: 2rem; */
+    /* font-family: 'Rhythem'; */
+    color: var(--banner-studio-color-theme);
+    }
 
 .banner-btn:hover{
     background-color: var(--highlight-2);
