C:/Program Files/Git/directory page init

--- a/src/App.css
+++ b/src/App.css
@@ -870,6 +870,12 @@ footer{
 /*/////////////*/
 
 
+
+/*//////////////////*/
+/*  DIRECTORY PAGE  */
+/*//////////////////*/
+
+
 @media screen and (max-width: 360px) {
   :root{  
   
